# daleel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.py  daleel.py  dedup.py  docker-compose.yml  estimator.py  exporter.py  master_db.py  planner.py  pyproject.toml  resolver.py  searcher.py
docs/: plan.md
src/: cli.py  main.py
src/core/: dedup.py  grid.py  planner.py
src/export/: checkpoint.py  exporter.py
src/models/: queries.py  regions.py
src/utils/: resolver.py
tests/: test_dedup.py  test_estimator.py  test_grid.py  test_resolver.py
